--- a/zeppelin-web/src/app/tabledata/columnselector_settings.html
+++ b/zeppelin-web/src/app/tabledata/columnselector_settings.html
@@ -48,8 +48,8 @@ limitations under the License.
               ng-style="prop.name === 'xAxis' ? { 'background-color': '#906ebd' } : prop.name === 'yAxis' ? { 'background-color': '#cd5c5c' } : prop.name === 'group' ? { 'background-color': '#5782bd' } : ''">
         {{prop.name}}
         <a tabindex="0" class="fa fa-info-circle" role="button"
-           ng-if="prop.tooltip"
-           style="color: white;"
+           ng-if="prop.tooltip" style="color: white;"
+           tooltip-placement="top" tooltip-append-to-body="true"
            uib-tooltip="{{prop.tooltip}}"></a>
         </span>
         <ul data-drop="true"
