[ZEPPELIN-2672] Fix interpreter repos url tooltip
### What is this PR for?
Fixing regression on showing interpreter repos tooltip

### What type of PR is it?
Bug Fix

### What is the Jira issue?
* https://issues.apache.org/jira/browse/ZEPPELIN-2672

### How should this be tested?
Zeppelin > Interpreter > Repository > (Mouse over) central/local/other

### Screenshots
After this fix:
![image](https://user-images.githubusercontent.com/26248959/27374071-6be20736-5662-11e7-9f30-7514fe342821.png)

### Questions:
* Does the licenses files need update? N
* Is there breaking changes for older versions? N
* Does this needs documentation? N

Author: Nelson Costa <nelson.costa85@gmail.com>

Closes #2423 from necosta/zeppelin2672 and squashes the following commits:

50ce1c7b [Nelson Costa] [ZEPPELIN-2672] Final adjusments
5413c4ba [Nelson Costa] [ZEPPELIN-2672] Remove popover directive files
2d6514f4 [Nelson Costa] [ZEPPELIN-2672] Also fixed column selector
c2fa47af [Nelson Costa] [ZEPPELIN-2672] Fix interpreter repos url tooltip

--- a/zeppelin-web/src/app/interpreter/interpreter.html
+++ b/zeppelin-web/src/app/interpreter/interpreter.html
@@ -63,14 +63,8 @@ limitations under the License.
       <ul class="noDot">
         <li class="liVertical" ng-repeat="repo in repositories">
           <a tabindex="0" class="btn btn-info" role="button"
-             popover-trigger="focus"
-             popover-placement="right"
-             popover-html-unsafe="<label>URL: </label>
-               {{repo.url}}<br>
-               <label>Username: </label>
-               {{repo.authentication.username}}<br>
-               <label>Proxy host: </label>
-               {{repo.proxy.host}}">
+             tooltip-append-to-body="true" tooltip-placement="top-left"
+             uib-tooltip="{{repo.url}}">
             <span class="fa fa-database"></span>
             {{repo.id}}&nbsp;
             <span ng-if="!isDefaultRepository(repo.id)" class="fa fa-close blackOpc"
