style: reindent html

--- a/zeppelin-web/src/app/interpreter/interpreter-create/interpreter-create.html
+++ b/zeppelin-web/src/app/interpreter/interpreter-create/interpreter-create.html
@@ -42,8 +42,7 @@ limitations under the License.
               The interpreter will be instantiated
               <span class="btn-group">
               <button type="button" class="btn btn-default btn-xs dropdown-toggle"
-                      data-toggle="dropdown"
-              >
+                      data-toggle="dropdown">
                 {{getInterpreterRunningOption(setting.id)}} <span class="caret"></span>
               </button>
               <ul class="dropdown-menu" role="menu">
