[gh-pages] [ZEPPELIN-2597] adding technologies and deployments (Main Page)
### What is this PR for?
This PR is for Improving more comfortable guidance for point of user view in the main zeppelin homepage.
To sum up, Technologies section is consist of 3 interpreters most people search or want (already talking about this on the mailing list.) and, Deployments section describes single or multiple user setting.

### What type of PR is it?
[Improvement]

### What is the Jira issue?
* [ZEPPELIN-2597](https://issues.apache.org/jira/browse/ZEPPELIN-2597)

### How should this be tested?
1. run `bundle exec jekyll serve --watch` in this branch
2. open `localhost:4000`

### Screenshots (if appropriate)
- Look `Technologies` and `Deployments` sections
![peek 2017-06-05 15-14](https://cloud.githubusercontent.com/assets/8110458/26772663/d5ba7cbe-4a01-11e7-8715-03569d00509a.gif)

### Questions:
* Does the licenses files need update? No
* Is there breaking changes for older versions? No
* Does this needs documentation? Yes, this is.

Author: soralee <sora0728@zepl.com>

Closes #2394 from soralee/adding_technologies_and_deployments and squashes the following commits:

05aefcbf [soralee] fix: missing typo
eebb50ba [soralee] fix: links the latest version (0.7.2)
d7a1d801 [soralee] fix: change links
dcb03deb [soralee] match border color change position user icon
752c4ae1 [soralee] change from padding to padding-top in bottom-text
6df03840 [soralee] SQL with smaller font size, adding padding bottom-text
695b648a [soralee] arrange 'use now' button, change _hover_text and content-text
73c73091 [soralee] fix: 10.improve p class, 11.Adjustment margin among components
ca1b1fdc [soralee] change SQL font, 8.min-height, improve 9.change sentence
317365ec [soralee] change class name instead of tech_deploy container
aad5eeff [soralee] remove file
813da0dd [soralee] change advertise.md -> technologies_deployments.md
238bc231 [soralee] improve layout for mobile browsers
30e81f66 [soralee] change us

--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -93,6 +93,6 @@
     </div>
   </div>
 </div>
-
+{% include_relative technologies_deployments.md %}
 {% include_relative whats_new.md %}
 {% endif %}
