--- a/assets/themes/zeppelin/css/style.css
+++ b/assets/themes/zeppelin/css/style.css
@@ -1,7 +1,7 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 @import url(//fonts.googleapis.com/css?family=Patua+One);
 @import url(//fonts.googleapis.com/css?family=Open+Sans);
-@import url(//fonts.googleapis.com/css?family=Titillium+Web);
+@import url(//fonts.googleapis.com/css?family=Raleway:300,400);
 
 body {
   padding-top: 50px;
@@ -1001,6 +1001,70 @@ a.anchorjs-link:hover { text-decoration: none; }
   .jumbotron .description {
     font-size: 22px;
   }
+
+  .tech_deploy .panel-content ._hover-text,
+  .tech_deploy .panel-content:hover ._hover-text {
+
+    font-size: 16px;
+    padding: 10px;
+  }
+
+  .tech_deploy .panel-content-user .content-text {
+    font-size: 16px;
+  }
+
+  .tech_deploy .panel-button {
+    font-size: 14px;
+  }
+
+  .tech_deploy .panel-content-user .user-button {
+    font-size: 14px;
+  }
+
+  .tech_deploy .panel-content {
+    margin-top: 10px;
+  }
+
+  .tech_deploy {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+@media only screen
+and (min-width: 480px)
+and (max-width: 768px) {
+  .tech_deploy .panel-content ._hover-text,
+  .tech_deploy .panel-content:hover ._hover-text {
+    width: 90%;
+    font-size: 20px;
+    padding: 10px;
+  }
+
+  .tech_deploy .panel-content ._default-text {
+    margin-left: 15px;
+  }
+
+  .tech_deploy .panel-button {
+    font-size: 18px;
+  }
+
+  .tech_deploy .panel-content-user .user-button {
+    font-size: 18px;
+  }
+
+  .tech_deploy .panel-content-user .content-text {
+    font-size: 20px;
+  }
+
+  .tech_deploy .panel-content {
+    margin-top: 10px;
+  }
+
+  .tech_deploy {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -1119,7 +1183,7 @@ and (max-width: 996px) {
   }
 
   .navbar-collapse.in {
-      overflow-y: auto;
+    overflow-y: auto;
   }
 
   .navbar-inverse .navbar-collapse.in .navbar-nav .dropdown-menu > li > a {
@@ -1127,7 +1191,7 @@ and (max-width: 996px) {
   }
 
   .navbar-inverse .navbar-collapse.in .navbar-nav .divider {
-      background: #286090;
+    background: #286090;
   }
 
   .collapse.in{
@@ -1155,6 +1219,29 @@ and (max-width: 996px) {
     margin-left: -12px;
     font-size: 15px;
   }
+
+  .tech_deploy .panel-content ._hover-text,
+  .tech_deploy .panel-content:hover ._hover-text {
+    width: 85%;
+    font-size: 14px;
+    padding: 10px;
+  }
+
+  .tech_deploy .panel-content-user .content-text {
+    font-size: 14px;
+  }
+
+  .tech_deploy .panel-button {
+    font-size: 14px;
+  }
+
+  .tech_deploy .panel-content-user .user-button {
+    font-size: 14px;
+  }
+
+  .tech_deploy .panel-content {
+    margin-top: 10px;
+  }
 }
 
 @media only screen
@@ -1166,6 +1253,10 @@ and (max-width: 1024px) {
 
   .navbar-collapse.collapse {
     padding-right: 0;
+  }
+
+  .advertise .panel-button {
+    font-size: 14px;
   }
 }
 
@@ -1295,4 +1386,247 @@ and (max-width: 631px) {
   background-position-y: 1px;
   height: 245px;
   opacity: 0.2;
+}
+
+/* Technologies Section */
+
+.tech_deploy {
+  background: #FFF;
+  padding-bottom: 40px;
+  padding-top: 22px;
+}
+
+.tech_deploy p {
+  padding-right: 9px;
+  padding-left: 9px;
+  margin-top: 25px;
+  margin-bottom: 30px;
+}
+
+.tech_deploy .bottom-text {
+  padding-right: 9px;
+  padding-left: 9px;
+  text-align: center;
+  font-size: 17px;
+  color: gray;
+  font-weight: 200;
+  font-style: italic;
+  padding-top: 15px;
+}
+
+.tech_deploy .section {
+  padding: 25px 15px 35px 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.tech_deploy h2 {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-align: center;
+  padding-bottom: 30px;
+  font-size: 30px;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-bottom: none;
+  letter-spacing: 1px;
+}
+
+.tech_deploy .panel-content {
+  font-weight: 500;
+  font-size: 14px;
+  height: 100%;
+  width: 100%;
+  color: #475A60;
+  background-color: transparent;
+  border: 1px solid #999;
+}
+
+._default-text {
+  opacity: 1;
+  position: absolute;
+  width: 90%;
+  height: 80%;
+  -webkit-transition: 0.6s;
+  -moz-transition: 0.6s;
+  -o-transition: 0.6s;
+  transition: 0.6s;
+  -webkit-transition-delay: 0.2s;
+  -moz-transition-delay: 0.2s;
+  -o-transition-delay: 0.2s;
+  transition-delay: 0.2s;
+}
+
+.tech_deploy .panel-content ._default-text {
+  font-family: 'Raleway', sans-serif;
+  font-size: 25px;
+  text-align: center;
+  font-weight: 300;
+  margin-top: 65px;
+}
+
+.tech_deploy .panel-content:hover ._default-text {
+  opacity: 0;
+  -webkit-transform: scale(0.3);
+  -moz-transform: scale(0.3);
+  -ms-transform: scale(0.3);
+  -o-transform: scale(0.3);
+  transform: scale(0.3);
+}
+
+._hover-text {
+  opacity: 0;
+  font-size: 18px;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  position: absolute;
+  font-weight: 500;
+  margin-left: 5px;
+  width: 88%;
+  -webkit-transition: 0.6s;
+  -moz-transition: 0.6s;
+  -o-transition: 0.6s;
+  transition: 0.6s;
+  -webkit-transition-delay: 0.2s;
+  -moz-transition-delay: 0.2s;
+  -o-transition-delay: 0.2s;
+  transition-delay: 0.2s;
+  padding: 10px;
+  min-height: 200px;
+}
+
+.tech_deploy .panel-content:hover ._hover-text {
+  opacity: 1;
+  position: absolute;
+  font-weight: 500;
+  -webkit-transform: translate(0,0);
+  -moz-transform: translate(0,0);
+  -ms-transform: translate(0,0);
+  -o-transform: translate(0,0);
+  transform: translate(0,0);
+  -webkit-transition-delay: .4s;
+  -moz-transition-delay: .4s;
+  -o-transition-delay: .4s;
+  transition-delay: .4s;
+}
+
+.tech_deploy .panel-content:hover:before,
+.tech_deploy .panel-content:hover:after {
+  content: '';
+  position: absolute;
+  top: 0.67em;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  opacity: 0;
+  -webkit-transition: .6s,opacity .6s;
+  -moz-transition: .6s,opacity .6s;
+  -o-transition: .6s,opacity .6s;
+  transition: .6s,opacity .6s;
+}
+
+.panel-button {
+  position: relative;
+  padding: 8px 15px;
+  z-index: 3;
+  float:right;
+  font-family: 'Roboto', sans-serif;
+  color: #00A7E0;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  white-space: nowrap;
+  outline: 0;
+  font-size: 14px;
+}
+
+/* Deployments Section */
+
+.tech_deploy .panel-content-user {
+  position: relative;
+  font-weight: 500;
+  font-size: 14px;
+  padding: 25px;
+  color: #475A60;
+  background-color: transparent;
+  border: 1px solid #999;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 15px;
+  margin-top: 25px;
+  margin-bottom: 30px;
+}
+
+.tech_deploy .panel-content-user span {
+  display: block;
+  margin-bottom: 8px;
+}
+
+.tech_deploy .panel-content-user .title-text {
+  font-size: 30px;
+  display: inline-block;
+  position: relative;
+  width: auto;
+  text-align: center;
+}
+
+.tech_deploy .panel-content-user .user-icon {
+  font-size: 27px;
+  position: relative;
+  width: auto;
+  text-align: center;
+  display: inline-block;
+  padding-right: 5px;
+}
+
+.underline {
+  display: block;
+  width: 50px;
+  height: 2px;
+  background: inherit;
+}
+
+.tech_deploy .panel-content-user .underline {
+  background: #999;
+}
+
+.content-text {
+  display:inline-block;
+  position: relative;
+  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  color: #475A60;
+  background-color: transparent;
+  height: 100%;
+  letter-spacing: .7px;
+}
+
+.user-button {
+  position: relative;
+  font-size: 14px;
+  font-family: 'Roboto', sans-serif;
+  color: inherit;
+  padding: 6px 14px;
+  float: right;
+  text-decoration: none;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  white-space: nowrap;
+  outline: 0;
+  border: 1px solid #00A7E0;
+  z-index: 3;
+  border-radius: 30px;
+  background-color: transparent;
+  margin-top: 15px;
+}
+
+.tech_deploy .panel-content-user .user-button {
+  background-color: #00A7E0;
+  color: #FFF;
+  position: relative;
+}
+
+.tech_deploy .panel-content-user .user-button:hover {
+  color: #FFF;
+  text-decoration: none;
+  background-color: #0479A2;
 }
