[ZEPPELIN-2700] Provide a link to interpreter binding mode doc
### What is this PR for?

Provide a link to the interpreter binding mode documentation page in the interpreter page to help understand what this feature is for (`usage/interpreter/interpreter_binding_mode.html`)

- **documentation is not deployed to web yet. So clicking this icon will redirect you to 404 page**

### What type of PR is it?
[Improvement | Documentation]

### Todos

DONE

### What is the Jira issue?

[ZEPPELIN-2700](https://issues.apache.org/jira/browse/ZEPPELIN-2700)

### How should this be tested?

1. Open the interpreter page
2. Check the links (URL, icon, ..)

### Screenshots (if appropriate)

#### Before

![image](https://user-images.githubusercontent.com/4968473/27620029-ad687f7e-5c01-11e7-96fb-6e53243346f4.png)

![image](https://user-images.githubusercontent.com/4968473/27620030-b0390b24-5c01-11e7-8918-9db376e99b49.png)

#### After

![image](https://user-images.githubusercontent.com/4968473/27620018-946c3f88-5c01-11e7-878b-7348ca4be5e8.png)

![image](https://user-images.githubusercontent.com/4968473/27620023-9f784f98-5c01-11e7-8d1a-160d52b98037.png)

### Questions:
* Does the licenses files need update? - NO
* Is there breaking changes for older versions? - NO
* Does this needs documentation? - NO

Author: 1ambda <1amb4a@gmail.com>

Closes #2447 from 1ambda/ZEPPELIN-2700/provide-link-for-interpreter-binding-mode-doc and squashes the following commits:

69158536 [1ambda] fix: Provide more descriptive tooltip message
41261239 [1ambda] feat: Add link to interpreter mode doc
72d6c063 [1ambda] fix: Remove useless margin-bottom
2291e63a [1ambda] style: reindent html

--- a/zeppelin-web/src/app/interpreter/interpreter-create/interpreter-create.html
+++ b/zeppelin-web/src/app/interpreter/interpreter-create/interpreter-create.html
@@ -42,8 +42,7 @@ limitations under the License.
               The interpreter will be instantiated
               <span class="btn-group">
               <button type="button" class="btn btn-default btn-xs dropdown-toggle"
-                      data-toggle="dropdown"
-              >
+                      data-toggle="dropdown">
                 {{getInterpreterRunningOption(setting.id)}} <span class="caret"></span>
               </button>
               <ul class="dropdown-menu" role="menu">
@@ -125,7 +124,11 @@ limitations under the License.
                 </li>
               </ul>
             </span>
-              process.
+              process
+              <a class="fa fa-info-circle interpreter-binding-mode-info-link"
+                 aria-hidden="true"
+                 uib-tooltip="Can manage interpreter sessions differently by setting this option. Click this button to learn more"
+                 ng-href="{{getInterpreterBindingModeDocsLink()}}" target="_blank"></a>
             <span ng-if="getInterpreterRunningOption(setting.id) === 'Per User' && ticket.principal !== 'anonymous'">
               <span ng-if="getPerNoteOption(setting.id) === 'shared'">
                 <button type="button" class="btn btn-default btn-xs"
@@ -135,9 +138,6 @@ limitations under the License.
                 </button>
               </span>
             </span>
-            </div>
-            <div class="col-md-6">
-              &nbsp;
             </div>
           </div>
           <div class="row interpreter"
