--- a/zeppelin-web/src/app/interpreter/interpreter.html
+++ b/zeppelin-web/src/app/interpreter/interpreter.html
@@ -234,7 +234,11 @@ limitations under the License.
                 </li>
               </ul>
             </span>
-            process.
+            process
+            <a class="fa fa-info-circle interpreter-binding-mode-info-link"
+               aria-hidden="true"
+               uib-tooltip="Can manage interpreter sessions differently by setting this option. Click this button to learn more"
+               ng-href="{{getInterpreterBindingModeDocsLink()}}" target="_blank"></a>
             <span ng-if="getInterpreterRunningOption(setting.id) === 'Per User' && ticket.principal !== 'anonymous'">
               <span ng-if="getPerNoteOption(setting.id) === 'shared'">
                 <button type="button" class="btn btn-default btn-xs"
@@ -245,9 +249,6 @@ limitations under the License.
                 </button>
               </span>
             </span>
-          </div>
-          <div class="col-md-6">
-            &nbsp;
           </div>
         </div>
         <div class="row interpreter"
@@ -296,7 +297,11 @@ limitations under the License.
                   </li>
                 </ul>
               </span>
-              process.
+              process
+              <a class="fa fa-info-circle interpreter-binding-mode-info-link"
+                 aria-hidden="true"
+                 uib-tooltip="Can manage interpreter sessions differently by setting this option. Click this button to learn more"
+                 ng-href="{{getInterpreterBindingModeDocsLink()}}" target="_blank"></a>
               <button type="button" class="btn btn-default btn-xs"
                       ng-disabled="!valueform.$visible"
                       ng-click="setPerNoteOption(setting.id, 'shared')"
