--- a/docs/_includes/themes/zeppelin/_navigation.html
+++ b/docs/_includes/themes/zeppelin/_navigation.html
@@ -36,7 +36,7 @@
 
             <li>
               <a href="#" data-toggle="dropdown" class="dropdown-toggle">Usage<b class="caret"></b></a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu scrollable-menu">
                 <li class="title"><span>Dynamic Form</span></li>
                 <li><a href="{{BASE_PATH}}/usage/dynamic_form/intro.html">What is Dynamic Form?</a></li>
                 <li role="separator" class="divider"></li>
@@ -75,7 +75,7 @@
 
             <li>
               <a href="#" data-toggle="dropdown" class="dropdown-toggle">Setup<b class="caret"></b></a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu scrollable-menu">
                 <li class="title"><span>Basics</span></li>
                 <li><a href="{{BASE_PATH}}/setup/basics/how_to_build.html">How to Build Zeppelin</a></li>
                 <li><a href="{{BASE_PATH}}/setup/basics/multi_user_support.html">Multi-user Support</a></li>
