--- a/zeppelin-web/src/app/interpreter/interpreter.html
+++ b/zeppelin-web/src/app/interpreter/interpreter.html
@@ -403,8 +403,29 @@ limitations under the License.
           <tr ng-repeat="key in setting.properties | sortByKey" >
             <td style="vertical-align: middle;">{{key}}</td>
             <td style="vertical-align: middle;">
-              <span editable-textarea="setting.properties[key]" e-form="valueform" e-msd-elastic>
-                {{setting.properties[key] | breakFilter}}
+              <span ng-if="setting.properties[key].type === 'textarea'"
+                    editable-textarea="setting.properties[key].value" e-form="valueform" e-msd-elastic>
+                 {{setting.properties[key].value | breakFilter}}
+              </span>
+              <span ng-if="setting.properties[key].type === 'string'"
+                    editable-text="setting.properties[key].value" e-form="valueform" e-msd-elastic>
+                {{setting.properties[key].value}}
+              </span>
+              <span ng-if="setting.properties[key].type === 'number'"
+                    editable-text="setting.properties[key].value" e-widget-number e-form="valueform" e-msd-elastic>
+                {{setting.properties[key].value}}
+              </span>
+              <span ng-if="setting.properties[key].type === 'url'"
+                    editable-text="setting.properties[key].value" e-form="valueform" e-msd-elastic>
+                <a ng-href="{{setting.properties[key].value}}">{{setting.properties[key].value}}</a>
+              </span>
+              <span ng-if="setting.properties[key].type === 'password'"
+                    editable-password="setting.properties[key].value" e-form="valueform" e-msd-elastic>
+                {{setting.properties[key].value ? '***' : ''}}
+              </span>
+              <span ng-if="setting.properties[key].type === 'checkbox'"
+                    editable-checkbox="setting.properties[key].value" e-form="valueform" e-msd-elastic>
+                {{setting.properties[key].value}}
               </span>
             </td>
             <td style="vertical-align: middle;" ng-if="valueform.$visible">
@@ -418,12 +439,22 @@ limitations under the License.
               <input ng-model="setting.propertyKey"
                      pu-elastic-input pu-elastic-input-minwidth="180px" />
             </td>
-            <td style="vertical-align: middle;">
-              <textarea msd-elastic ng-model="setting.propertyValue"></textarea>
+
+            <td style="vertical-align: middle;" ng-switch on="setting.propertyType">
+              <textarea ng-switch-default msd-elastic ng-model="setting.propertyValue"></textarea>
+              <input ng-switch-when="string" type="text" msd-elastic ng-model="setting.propertyValue"/>
+              <input ng-switch-when="number" type="text" msd-elastic ng-model="setting.propertyValue" widget-number />
+              <input ng-switch-when="url" type="text" msd-elastic ng-model="setting.propertyValue" />
+              <input ng-switch-when="password" type="password" msd-elastic ng-model="setting.propertyValue" />
+              <input ng-switch-when="checkbox" type="checkbox" msd-elastic ng-model="setting.propertyValue" />
             </td>
             <td style="vertical-align: middle;">
+              <select ng-model="setting.propertyType" ng-init="setting.propertyType=interpreterPropertyTypes[0]"
+                      ng-options="item for item in interpreterPropertyTypes" ng-change="defaultValueByType(setting)">
+              </select>
+
               <button class="btn btn-default btn-sm fa fa-plus"
-                   ng-click="addNewInterpreterProperty(setting.id)">
+                      ng-click="addNewInterpreterProperty(setting.id)">
               </button>
             </td>
           </tr>
