note-import: Rename files
note-import: Remove meaningless postfix dialog

note-create: Remove useless dialog postfix

note-create: Rename files

note-create: Rename injected controller

note-create: Rename to noteCreateModal

note-import: Rename to noteImportCtrl

--- a/zeppelin-web/src/components/navbar/navbar.html
+++ b/zeppelin-web/src/components/navbar/navbar.html
@@ -37,8 +37,8 @@ limitations under the License.
             <span>Notebook</span>
             <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li ng-controller="NotenameCtrl as notenamectrl">
-              <a href="" data-toggle="modal" data-target="#noteNameModal" ng-click="notenamectrl.getInterpreterSettings()">
+            <li ng-controller="NoteCreateCtrl as noteCreateCtrl">
+              <a href="" data-toggle="modal" data-target="#noteCreateModal" ng-click="noteCreateCtrl.getInterpreterSettings()">
                 <i class="fa fa-plus"></i>
                 Create new note
               </a>
