--- a/zeppelin-web/src/components/navbar/navbar-note-list-elem.html
+++ b/zeppelin-web/src/components/navbar/navbar-note-list-elem.html
@@ -24,8 +24,8 @@ limitations under the License.
           <div ng-if="node.id !== navbar.TRASH_FOLDER_ID">
             <i style="font-size: 10px; margin-right: 5px;" class="fa fa-folder"></i>
             <span>{{noteName(node)}}</span>
-            <i data-toggle="modal" data-target="#noteNameModal" ng-controller="NotenameCtrl as notenamectrl"
-              ng-click="notenamectrl.getInterpreterSettings()" data-path="{{node.id}}"
+            <i data-toggle="modal" data-target="#noteCreateModal" ng-controller="NoteCreateCtrl as noteCreateCtrl"
+              ng-click="noteCreateCtrl.getInterpreterSettings()" data-path="{{node.id}}"
               style="font-size: 12px; margin-left: 5px; margin-right: 5px;"
               ng-show="showFolderButton" class="fa fa-plus"
               uib-tooltip="Create new note"
