--- a/zeppelin-web/src/components/note-create/note-create.html
+++ b/zeppelin-web/src/components/note-create/note-create.html
@@ -11,18 +11,18 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<div id="noteNameModal" class="modal fade" role="dialog"
-     modalvisible previsiblecallback="notenamectrl.preVisible"
+<div id="noteCreateModal" class="modal fade" role="dialog"
+     modalvisible previsiblecallback="noteCreateCtrl.preVisible"
      targetinput="noteName" tabindex="-1">
   <div class="modal-dialog">
 
     <!-- modal content-->
-    <div class="modal-content" id="NotenameCtrl">
+    <div class="modal-content" id="NoteCreateCtrl">
       <!-- modal header -->
       <div class="modal-header modal-header-note-name">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title" ng-show="!notenamectrl.clone">Create New Note</h4>
-        <h4 class="modal-title" ng-show="notenamectrl.clone">Clone Note</h4>
+        <h4 class="modal-title" ng-show="!noteCreateCtrl.clone">Create New Note</h4>
+        <h4 class="modal-title" ng-show="noteCreateCtrl.clone">Clone Note</h4>
       </div>
 
       <!-- modal body-->
@@ -34,10 +34,10 @@ limitations under the License.
             <input placeholder="Insert Note Name" type="text"
                    class="form-control note-name-create-input"
                    id="noteName" ng-model="note.notename"
-                   ng-enter="notenamectrl.handleNameEnter()" />
+                   ng-enter="noteCreateCtrl.handleNameEnter()" />
           </div>
           <!-- default interpreter -->
-          <div class="btn-group default-interpreter-select" ng-show="!notenamectrl.clone">
+          <div class="btn-group default-interpreter-select" ng-show="!noteCreateCtrl.clone">
             <label for="defaultInterpreter">Default Interpreter</label>
             <select id="defaultInterpreter"
                     name="defaultInterpreter"
@@ -56,9 +56,9 @@ limitations under the License.
       <div class="modal-footer">
         <button type="button" id="createNoteButton"
                 class="btn btn-primary"
-                data-dismiss="modal" ng-click="notenamectrl.createNote()">
-          <span ng-show="!notenamectrl.clone">Create</span>
-          <span ng-show="notenamectrl.clone">Clone</span>
+                data-dismiss="modal" ng-click="noteCreateCtrl.createNote()">
+          <span ng-show="!noteCreateCtrl.clone">Create</span>
+          <span ng-show="noteCreateCtrl.clone">Clone</span>
         </button>
       </div>
     </div>
