--- a/zeppelin-web/src/components/note-import/note-import.html
+++ b/zeppelin-web/src/components/note-import/note-import.html
@@ -20,7 +20,7 @@ limitations under the License.
       <!-- modal-header -->
       <div class="modal-header modal-header-import">
         <button type="button" class="close" data-dismiss="modal"
-                ng-click="noteimportctrl.resetFlags()">&times;</button>
+                ng-click="noteImportCtrl.resetFlags()">&times;</button>
         <h4 class="modal-title">Import New Note</h4>
       </div>
 
@@ -68,11 +68,11 @@ limitations under the License.
       <div class="modal-footer modal-footer-import" ng-show="note.step2">
         <button type="button" id="importBackButton"
                 class="btn btn-default"
-                ng-click="noteimportctrl.importBack()">Back
+                ng-click="noteImportCtrl.importBack()">Back
         </button>
         <button type="button" id="importNoteButton"
                 class="btn btn-default"
-                ng-click="noteimportctrl.importNote()">Import Note
+                ng-click="noteImportCtrl.importNote()">Import Note
         </button>
       </div>
     </div>
