--- a/zeppelin-web/src/components/note-rename/note-rename.html
+++ b/zeppelin-web/src/components/note-rename/note-rename.html
@@ -11,7 +11,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<div id="renameModal" class="modal fade" role="dialog" tabindex="-1">
+<div id="noteRenameModal" class="modal fade" role="dialog" tabindex="-1">
   <div class="modal-dialog">
     <div class="modal-content">
       <!-- modal-header -->
