--- a/zeppelin-web/src/app/interpreter/interpreter-create.html
+++ b/zeppelin-web/src/app/interpreter/interpreter-create.html
@@ -283,7 +283,7 @@ limitations under the License.
                 <input ng-if="newInterpreterSetting.properties[key].type === 'string'"
                        type="text" msd-elastic ng-model="newInterpreterSetting.properties[key].value" />
                 <input ng-if="newInterpreterSetting.properties[key].type === 'number'"
-                       type="text" widget-number msd-elastic ng-model="newInterpreterSetting.properties[key].value" />
+                       type="text" number-widget msd-elastic ng-model="newInterpreterSetting.properties[key].value" />
                 <input ng-if="newInterpreterSetting.properties[key].type === 'url'"
                        type="text" msd-elastic ng-model="newInterpreterSetting.properties[key].value" />
                 <input ng-if="newInterpreterSetting.properties[key].type === 'password'"
@@ -308,7 +308,7 @@ limitations under the License.
               <td style="vertical-align: middle;" ng-switch on="newInterpreterSetting.propertyType">
                 <textarea ng-switch-default msd-elastic ng-model="newInterpreterSetting.propertyValue"></textarea>
                 <input ng-switch-when="string" type="text" msd-elastic ng-model="newInterpreterSetting.propertyValue" />
-                <input ng-switch-when="number" type="text" widget-number msd-elastic ng-model="newInterpreterSetting.propertyValue" />
+                <input ng-switch-when="number" type="text" number-widget msd-elastic ng-model="newInterpreterSetting.propertyValue" />
                 <input ng-switch-when="url" type="text" msd-elastic ng-model="newInterpreterSetting.propertyValue" />
                 <input ng-switch-when="password" type="password" msd-elastic ng-model="newInterpreterSetting.propertyValue" />
                 <input ng-switch-when="checkbox" type="checkbox" msd-elastic ng-model="newInterpreterSetting.propertyValue" />
