--- a/zeppelin-web/src/app/notebook-repository/notebook-repository.html
+++ b/zeppelin-web/src/app/notebook-repository/notebook-repository.html
@@ -16,7 +16,7 @@ limitations under the License.
     <div class="row">
       <div class="col-md-12">
         <h3 class="new_h3">
-          Notebook Repos
+          Notebook Repository
         </h3>
       </div>
     </div>
