--- a/zeppelin-web/src/app/notebook/notebook.html
+++ b/zeppelin-web/src/app/notebook/notebook.html
@@ -114,17 +114,17 @@ limitations under the License.
        ng-class="columnWidthClass(currentParagraph.config.colWidth)"
        style="margin: 0; padding: 0;"
        viewport-watch>
-    <div class="new-paragraph" ng-click="insertNew('above')" ng-hide="viewOnly || asIframe || revisionView">
+    <div class="new-paragraph" ng-click="insertNew('above')" ng-hide="reportMode || viewOnly || asIframe || revisionView">
       <h4 class="plus-sign">&#43;</h4>
     </div>
     <div id="{{currentParagraph.id}}_paragraphColumn"
          ng-include src="'app/notebook/paragraph/paragraph.html'"
          ng-class="{'paragraph-space box paragraph-margin': !asIframe, 'focused': paragraphFocused,
                     'lastEmptyParagraph': !paragraph.text && !paragraph.result}"
-         ng-hide="currentParagraph.config.tableHide && viewOnly"
+         ng-hide="currentParagraph.config.tableHide && reportMode"
          ng-dblclick="paragraphOnDoubleClick(currentParagraph.id);">
     </div>
-    <div class="new-paragraph" ng-click="insertNew('below');" ng-hide="!$last || viewOnly || asIframe || revisionView">
+    <div class="new-paragraph" ng-click="insertNew('below');" ng-hide="!$last || viewOnly || reportMode || asIframe || revisionView">
       <h4 class="plus-sign">&#43;</h4>
     </div>
   </div>
