fix: Remove lodash dependency

--- a/zeppelin-web/src/app/credential/credential.html
+++ b/zeppelin-web/src/app/credential/credential.html
@@ -85,11 +85,11 @@ limitations under the License.
 
 <div class="box width-full">
   <div class="row interpreter">
-    <div ng-show="_.isEmpty(credentialInfo) || valueform.$hidden"
+    <div ng-show="!hasCredential(credentialInfo) || valueform.$hidden"
          class="col-md-12 gray40-message">
       <em>Currently there is no credential information</em>
     </div>
-    <div class="col-md-12" ng-show="!_.isEmpty(credentialInfo) || valueform.$visible">
+    <div class="col-md-12" ng-show="hasCredential(credentialInfo) || valueform.$visible">
       <table class="table table-striped">
         <thead>
         <tr>
