fix: Add missing tbody in credential.html

--- a/zeppelin-web/src/app/credential/credential.html
+++ b/zeppelin-web/src/app/credential/credential.html
@@ -99,52 +99,54 @@ limitations under the License.
           <th></th>
         </tr>
         </thead>
-        <tr ng-repeat="credential in credentialInfo">
-          <td>
-            <span>
-              {{credential.entity}}
-            </span>
-          </td>
-          <td>
-            <span editable-textarea="credential.username" e-name="username" e-form="valueform"
-                  e-msd-elastic focus-if="credential.username.length == 0">
-              {{credential.username}}
-            </span>
-          </td>
-          <td>
-            <span editable-password="credential.password" e-name="password" e-form="valueform"
-                  e-msd-elastic focus-if="credential.password.length == 0">
-              **********
-            </span>
-          </td>
-          <td>
-            <!-- Edit credential info -->
-            <span style="float:right" ng-show="!valueform.$visible">
-              <button class="btn btn-default btn-xs"
-                      ng-click="valueform.$show();
-                      copyOriginCredentialsInfo();">
-                <span class="fa fa-pencil"></span> edit</button>
-              <button class="btn btn-default btn-xs"
-                      ng-click="removeCredentialInfo(credential.entity)">
-                <span class="fa fa-trash"></span> remove</button>
+        <tbody>
+          <tr ng-repeat="credential in credentialInfo">
+            <td>
+              <span>
+                {{credential.entity}}
+              </span>
+            </td>
+            <td>
+              <span editable-textarea="credential.username" e-name="username" e-form="valueform"
+                    e-msd-elastic focus-if="credential.username.length == 0">
+                {{credential.username}}
+              </span>
+            </td>
+            <td>
+              <span editable-password="credential.password" e-name="password" e-form="valueform"
+                    e-msd-elastic focus-if="credential.password.length == 0">
+                **********
+              </span>
+            </td>
+            <td>
+              <!-- Edit credential info -->
+              <span style="float:right" ng-show="!valueform.$visible">
+                <button class="btn btn-default btn-xs"
+                        ng-click="valueform.$show();
+                        copyOriginCredentialsInfo();">
+                  <span class="fa fa-pencil"></span> edit</button>
+                <button class="btn btn-default btn-xs"
+                        ng-click="removeCredentialInfo(credential.entity)">
+                  <span class="fa fa-trash"></span> remove</button>
 
-            </span>
-            <span style="float:right" ng-show="valueform.$visible">
-              <form editable-form name="valueform"
-                    onbeforesave="updateCredentialInfo(valueform, $data, credential.entity)"
-                    ng-show="valueform.$visible">
-                <button type="submit" class="btn btn-primary btn-xs">
-                  <span class="fa fa-check"></span> save
-                </button>
-                <button type="button" class="btn btn-default btn-xs"
-                        ng-disabled="valueform.$waiting"
-                        ng-click="valueform.$cancel();">
-                  <span class="fa fa-remove"></span> cancel
-                </button>
-              </form>
-            </span>
-          </td>
-        </tr>
+              </span>
+              <span style="float:right" ng-show="valueform.$visible">
+                <form editable-form name="valueform"
+                      onbeforesave="updateCredentialInfo(valueform, $data, credential.entity)"
+                      ng-show="valueform.$visible">
+                  <button type="submit" class="btn btn-primary btn-xs">
+                    <span class="fa fa-check"></span> save
+                  </button>
+                  <button type="button" class="btn btn-default btn-xs"
+                          ng-disabled="valueform.$waiting"
+                          ng-click="valueform.$cancel();">
+                    <span class="fa fa-remove"></span> cancel
+                  </button>
+                </form>
+              </span>
+            </td>
+          </tr>
+        </tbody>
       </table>
     </div>
   </div>
