Make community link absolute

--- a/_includes/themes/zeppelin/_navigation.html
+++ b/_includes/themes/zeppelin/_navigation.html
@@ -44,7 +44,7 @@
         <li class="docs">
           <a href="#" data-toggle="dropdown" class="dropdown-toggle">Community<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="community.html">Contributors</a></li>
+            <li><a href="/community.html">Contributors</a></li>
             <li><a href="https://github.com/apache/zeppelin">GitHub</a></li>
           </ul>
         </li>
