--- a/zeppelin-web/src/app/jobmanager/jobs/job-control.html
+++ b/zeppelin-web/src/app/jobmanager/jobs/job-control.html
@@ -13,30 +13,18 @@ limitations under the License.
 -->
 
 <div id="{{notebookJob.noteId}}_control" class="control">
+  <span ng-bind="lastExecuteTime(notebookJob.unixTimeLastRun)"></span>
   <span>
-    {{lastExecuteTime(notebookJob.unixTimeLastRun)}}
-  </span>
-  <span>
-    <span ng-if="notebookJob.isRunningJob">
-      RUNNING
-    </span>
-    <span ng-if="!notebookJob.isRunningJob">
-      READY
-    </span>
+    <span ng-bind="notebookJob.isRunningJob ? 'RUNNING' : 'READY'"></span>
   </span>
 
-  <span ng-if="notebookJob.isRunningJob">
-    {{getProgress()}}%
-  </span>
+  <span ng-if="notebookJob.isRunningJob" ng-bind="getProgress()"></span>
+
   <!-- Run / Cancel button -->
   <span
-    ng-if="!notebookJob.isRunningJob"
-    class="icon-control-play" style="cursor:pointer;color:#3071A9" tooltip-placement="left" uib-tooltip="START ALL Job"
-    ng-click="runNotebookJob(notebookJob.noteId)">
-  </span>
-  <span
-    ng-if="notebookJob.isRunningJob"
-    class="icon-control-pause" style="cursor:pointer;color:#3071A9" tooltip-placement="left" uib-tooltip="STOP ALL Job"
-    ng-click="stopNotebookJob(notebookJob.noteId)">
+    class="job-control-btn" tooltip-placement="left"
+    uib-tooltip-html="!notebookJob.isRunningJob ? 'Start All Jobs' : 'Stop All Jobs'"
+    ng-click="!notebookJob.isRunningJob ? runNotebookJob(notebookJob.noteId) : stopNotebookJob(notebookJob.noteId)"
+    ng-class="!notebookJob.isRunningJob ? 'icon-control-play' : 'icon-control-pause'">
   </span>
 </div>
