--- a/zeppelin-web/src/app/jobmanager/jobs/job-progress-bar.html
+++ b/zeppelin-web/src/app/jobmanager/jobs/job-progress-bar.html
@@ -14,9 +14,9 @@ limitations under the License.
 
 <div id="{{notebookJob.noteId}}_runControl" class="runControl">
   <div id="{{notebookJob.noteId}}_progress" class="progress" ng-if="notebookJob.isRunningJob === true">
-      <div ng-if="getProgress()>0 && getProgress()<100 && notebookJob.isRunningJob === true"
-        class="progress-bar" role="progressbar" ng-style="{width:getProgress()+'%'}"></div>
-      <div ng-if="(getProgress()<=0 || getProgress()>=100) && (notebookJob.isRunningJob === true)"
-          class="progress-bar progress-bar-striped active" role="progressbar" style="width:100%;"></div>
+      <div class="progress-bar" role="progressbar"
+           ng-style="showPercentProgressBar ? { 'width': getProgress() } : { 'width': '100%' }"
+           ng-class="showPercentProgressBar ? '' : 'progress-bar-striped active'">
+      </div>
   </div>
 </div>
