--- a/zeppelin-web/src/app/notebook/notebook-actionBar.html
+++ b/zeppelin-web/src/app/notebook/notebook-actionBar.html
@@ -164,6 +164,45 @@ limitations under the License.
       </div>
     </span>
 
+    <span class="labelBtn btn-group" id="searchGroup" style="vertical-align:middle; display:inline-block;">
+      <button type="button" class="btn btn-default btn-xs dropdown-toggle"
+              data-toggle="dropdown" tooltip-placement="bottom" uib-tooltip="Search code">
+        <i class="fa fa-search"></i>
+      </button>
+      <ul class="dropdown-menu search-dropdown" ng-click="$event.stopPropagation()" style="width: 350px">
+        <li>
+          <div class="input-group input-group-sm search-group">
+            <span class="input-group-addon">Find</span>
+            <input type="text" class="form-control"
+                   ng-class="{'no-match': !search.occurrencesExists && search.searchText !== ''}"
+                   ng-change="markAllOccurrencesAndHighlightFirst()"
+                   ng-click="markAllOccurrences()"
+                   ng-model="search.searchText"  ng-trim="false"/>
+            <div class="input-group-btn">
+              <button class="btn btn-default" ng-click="prevOccurrence()">
+                <i class="fa fa-angle-left" aria-hidden="true"></i>
+              </button>
+            </div>
+            <div class="input-group-btn">
+              <button class="btn btn-default" ng-click="nextOccurrence()">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+              </button>
+            </div>
+          </div>
+          <div class="input-group input-group-sm search-group">
+            <span class="input-group-addon">Replace</span>
+            <input type="text" class="form-control" ng-model="search.replaceText" ng-trim="false"/>
+            <div class="input-group-btn">
+              <button class="btn btn-default" ng-click="replace()">Replace</button>
+            </div>
+            <div class="input-group-btn">
+              <button class="btn btn-default" ng-click="replaceAll()">All</button>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </span>
+
 <!-- put the delete action by itself for your protection -->
       <span class="labelBtn" style="vertical-align:middle; display:inline-block;">
         <!-- if the note is in the trash, remove note permanently -->
