refactor: Remove ng-init

--- a/zeppelin-web/src/app/jobmanager/jobmanager.html
+++ b/zeppelin-web/src/app/jobmanager/jobmanager.html
@@ -11,8 +11,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<!-- Here the controller <JobManagerCtrl> is not needed because explicitly set in the app.js (route) -->
-<div id="job-manager-header" class="job-manager-header" data-ng-init="init()">
+<div id="job-manager-header" class="job-manager-header">
   <div class="header">
     <div class="row">
       <div class="col-md-12">
